profile page update, mobile layout change for all new pages

--- a/views/AddFamilyPlanning.ejs
+++ b/views/AddFamilyPlanning.ejs
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Reflect Sign up</title>
+  <title>Reflect</title>
 
   <!-- Custom fonts for this template-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -54,12 +54,13 @@
                   <div class="text-center">
                     <h1 class="h4 mb-4 signinHeader">Add a Family Member.</h1>
                       <p>Add up to five family members that can all enjoy reflect today</p>
+                      <div class="addedFamilyMember"><i class="far fa-check-circle"></i> Succefully Added Family Member</div>
                   </div>
                     <br>
                   <form class="user" method="post">
                       <div class="text-center">
                         <div class="form-group">
-                            <div class="row justify-content-center">
+                            <div class="row justify-content-center position-relative">
                                 <div class="col-12 col-md-3 fmProfilePic">
                                     <div class="familyMemberCard" id="parent"><div id="famPic1" class="familyMemberPhoto-lg"><i class="fas fa-3x fa-user-circle"></i></div>
                                     <label class="btn chooseFile" for="pic1">Upload</label>
@@ -208,29 +209,27 @@
                                                 </select>
                                             </div>
                                         </div>
-                                    <br>
+                                    <br><br>
+                                <div class="row justify-content-center">
+                                <div class="col-12 col-md-6">
+                                <a href="AddFamilyPlanning.html" class="btn btn-danger btn-user btn-block-sm fmBtn">
+                                    <div class="mobileHide">Add Family Member</div>
+                                    <div class="mobileShow">Add</div>
+                                </a>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                <a href="FamilyPlanning.html" class="btn btn-dark btn-user btn-block-sm fmBtn">
+                                        <div class="mobileHide">Back to Profile</div>
+                                    <div class="mobileShow">Back</div>
+                                </a>
+                                </div>
+                            </div>
                                 </div>
                             </div>
                             </div>
                             <br>
                         </div>
                     </div>
-                        <div class="">
-                            <div class="row justify-content-center">
-                                <div class="col-6 col-md-5">
-                                <a href="FamilyPlanning.html" class="btn btn-danger btn-user btn-block-sm fmBtn">
-                                        <div class="mobileHide">Back to Profile</div>
-                                    <div class="mobileShow">Back</div>
-                                </a>
-                                </div>
-                                <div class="col-6 col-md-5">
-                                <a href="FamilyPlanning2.html" class="btn btn-danger btn-user btn-block-sm fmBtn">
-                                    <div class="mobileHide">Add Family Member</div>
-                                    <div class="mobileShow">Add</div>
-                                </a>
-                                </div>
-                            </div>
-                        </div>
                   </form>
                 </div>
               </div>
@@ -245,7 +244,7 @@
   </div>
     
 <!-- Footer -->
-<footer class="page-footer font-small footerCustom" style="">
+<footer class="page-footer font-small footerCustom">
 
       <!-- Footer Links -->
   <div class="container text-center">
