--- a/views/FamilyPlanning.ejs
+++ b/views/FamilyPlanning.ejs
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Reflect Sign up</title>
+  <title>Reflect</title>
 
   <!-- Custom fonts for this template-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -94,22 +94,22 @@
                                 <a class="col-2 col-md-2 squareOption" data-toggle="modal" data-target="#squarespaceModal1"><i class="fas fa-2x fa-trash-alt"></i></a>
                             </div>
                         </div>
-                    </div>
-                      <br><br>
+                        <br>
                             <div class="row justify-content-center">
-                                <div class="col-6 col-md-6">
-                                <a href="Profile.html" class="btn btn-danger btn-user btn-block-sm fmBtn">
-                                        <div class="mobileHide">Back to Profile</div>
-                                    <div class="mobileShow">Back</div>
-                                </a>
-                                </div>
-                                <div class="col-6 col-md-6">
+                                <div class="col-12 col-md-6">
                                 <a href="AddFamilyPlanning.html" class="btn btn-danger btn-user btn-block-sm fmBtn">
                                     <div class="mobileHide">Add Family Member</div>
                                     <div class="mobileShow">Add</div>
                                 </a>
                                 </div>
+                                <div class="col-12 col-md-6">
+                                <a href="Profile.html" class="btn btn-dark btn-user btn-block-sm fmBtn">
+                                        <div class="mobileHide">Back to Profile</div>
+                                    <div class="mobileShow">Back</div>
+                                </a>
+                                </div>
                             </div>
+                    </div>
                   </form>
                 </div>
               </div>
@@ -123,17 +123,19 @@
 
   </div>
 
-<!-- line modal for Billing details -->
+<!-- line modal for deleting fm -->
 <div class="modal fade" id="squarespaceModal1" role="dialog" aria-labelledby="modalLabel">
   <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
-            <h3 class="modal-title" id="lineModalLabel">Are you sure you want to delete this user?</h3>
+            <h3 class="modal-title" id="lineModalLabel">Delete Confirmation</h3>
             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
         </div>
         <div class="modal-body">
          <div class="form-group">
-            <label class="modal-label">You will be permanently deleting this user and all user data.</label>
+            <label class="modal-label subText">You will be permanently deleting this user and all user data.</label>
+             <br>
+             <label class="modal-label subText">Are you sure you want to delete this family member? </label>
           </div>
         </div>
         <div class="modal-footer">
