--- a/views/UserInfo.ejs
+++ b/views/UserInfo.ejs
@@ -56,59 +56,105 @@
                   <form class="user" method="get" action="payment">
                       <input id="plan" name="plan" hidden>
                       <input type="hidden" value="<%= uinfo %>" name="uinfo">
-                      <div  class="text-center" style="margin: auto;">
+                      <div  class="text-center m-auto">
                         <div class="row col">
-                          <label>Gender</label>
+                          <label class="contextBody">Gender</label>
                         </div>
-                          <br>
-                        <div class="row col" style="border-top: 0px; margin-bottom: 10px;">
-                            <div class="form-group">
-                            <select class="form-control infoGender" name="gender" id="gender">
-                              <option>Female</option>
-                              <option>Male</option>
-                              <option selected>Other</option>
-                            </select>
-                          </div>
-                        </div>
-                        <div class="row col">
-                          <label>Age</label>
-                        </div>
-                        <div class="row col" style="border-top: 0px; margin-bottom: 10px;">
-                            <div class="form-group">
-                            <select class="form-control infoGender" name="age" id="age">
-                              <option value="20" selected>18-24 years old</option>
-                              <option value="30">25-34 years old</option>
-                              <option value="40">35-44 years old</option>
-                              <option value="50">45-54 years old</option>
-                              <option value="60">65-74 years old</option>
-                              <option value="70">75 years or older</option>
-                            </select>
-                          </div>
+                        <div class="row mb-2">
+                            <div class="col">
+                                <div class="form-group w-100">
+                                    <select class="form-control infoGender-2" name="gender" id="gender">
+                                      <option>Female</option>
+                                      <option>Male</option>
+                                      <option selected>Other</option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
                           
                         <div class="row text-left">
                             <div class="col">
-                              <label>Weight (pounds)</label>
+                              <label class="contextBody">Weight (pounds)</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col">
-                                <input class="form-control infoGender" type="number" name="weight" id="weight" min="0" data-bind="value:replyNumber" />
+                                <input class="form-control infoGender-2" type="number" name="weight" id="weight" min="0" data-bind="value:replyNumber" />
                             </div>
                         </div>
                           <br>
                         <div class="row text-left">
                             <div class="col">
-                              <label class="labels">Height (feet)</label>
+                              <label class="contextBody">Height (feet)</label>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row mb-4">
                             <div class="col">
-                                <input class="form-control infoGender" type="number" step="0.01" name="height" id="height" min="0" data-bind="value:replyNumber" />
+                                <input class="form-control infoGender-2" type="number" step="0.01" name="height" id="height" min="0" data-bind="value:replyNumber" />
+                            </div>
+                        </div>
+                       
+                          <div class="row col">
+                            <label class="contextBody">Birthday</label>
+                        </div>
+                        <div class="row mb-4">
+                            <div class="col-md-4">
+                                <select class="form-control birthday-sm" id="birthM">
+                                  <option selected>January</option>
+                                    <option>February</option>
+                                    <option>March</option>
+                                    <option>April</option>
+                                    <option>May</option>
+                                    <option>June</option>
+                                    <option>July</option>
+                                    <option>August</option>
+                                    <option>September</option>
+                                    <option>October</option>
+                                    <option>November</option>
+                                    <option>December</option>
+                                </select>
+                            </div>
+                            <div class="col-md-4">
+                                <select class="form-control birthday-sm"id="birthD">
+                                    <option selected>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                    <option>5</option>
+                                    <option>6</option>
+                                    <option>7</option>
+                                    <option>8</option>
+                                    <option>9</option>
+                                    <option>10</option>
+                                    <option>11</option>
+                                    <option>12</option>
+                                    <option>13</option>
+                                    <option>14</option>
+                                    <option>15</option>
+                                    <option>16</option>
+                                    <option>17</option>
+                                    <option>18</option>
+                                    <option>19</option>
+                                    <option>20</option>
+                                    <option>21</option>
+                                    <option>22</option>
+                                    <option>23</option>
+                                    <option>24</option>
+                                    <option>25</option>
+                                    <option>26</option>
+                                    <option>27</option>
+                                    <option>28</option>
+                                    <option>29</option>
+                                    <option>30</option>
+                                    <option>31</option>
+                                </select>
+                            </div>
+                            <div class="col-md-4">
+                                <select class="form-control birthday-sm" id="birthY">
+                                </select>
                             </div>
                         </div>
                           
-                      <br>
                     <button type="submit" id="sumbitBtn" class="btn btn-danger btn-user btn-block signupText">
                       Continue
                     </button>
