--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,7 +116,7 @@
       </div>
     </div>
     <br><br><br>
-    <div class="container text-center">
+    <div class="container text-center" id="FAQ">
       <div class="row justify-content-center border-top border-light">
         <div class="col-lg-8 topping">
           <h2 class="splashHeading text-white">Frequently Asked Questions</h2>
